# EDD

C/C_Practicas/AreaTriangulo/: AreaTriangulo(TODO_MAIN).c
C/C_Practicas/HolaMundo/: HolaMundo.c
C/C_Practicas/Printf/: IntFloatChar.c  ResevaMemoria.c
C/edd-2014.2/: COPYING  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
C/edd-2014.2/doc/: doxyfile.in  edd.dox
C/edd-2014.2/lib/: arbolbinario.c  arbolbinario.h  arreglos.c  arreglos.h  cola.c  cola.h  diccionario.c  diccionario.h  grafica.c  grafica.h  lista.c  lista.h  monticulominimo.c  monticulominimo.h  pila.c  pila.h  util.c  util.h
C/edd-2014.2/src/: main.c
C/edd-2014.2/test/: test-arbolbinario.c  test-arreglos.c  test-cola.c  test-diccionario.c  test-grafica.c  test-lista.c  test-monticulominimo.c  test-pila.c  test-util.c
Practicas/Practica01/practica1/: README.txt  build.xml
Practicas/Practica01/practica1/src/mx/unam/ciencias/edd/: Lista.java  Practica1.java
Practicas/Practica01/practica1/src/mx/unam/ciencias/edd/test/: TestLista.java~
Practicas/Practica02/practica2/: build.xml
Practicas/Practica02/practica2/src/mx/unam/ciencias/edd/: Lista.java  Practica2.java
Practicas/Practica03/: Practica3.tar
Practicas/Practica03/practica3/: build.xml
Practicas/Practica03/practica3/src/mx/unam/ciencias/edd/: Practica3.java
Practicas/Practica04/: practica4.tar
Practicas/Practica04/practica4/: build.xml
Practicas/Practica04/practica4/src/mx/unam/ciencias/edd/: ArbolBinario.java  ArbolBinario.java~  ArbolBinarioCompleto.java  ArbolBinarioCompleto.java~  Practica4.java  VerticeArbolBinario.java
Practicas/Practica05/: Practica5.tar
Practicas/Practica05/practica5/: build.xml
Practicas/Practica05/practica5/src/mx/unam/ciencias/edd/: ArbolBinarioOrdenado.java  Lista.java  Practica5.java
Practicas/Practica05/practica5/src/mx/unam/ciencias/edd/test/: TestArbolBinarioOrdenado.java
Practicas/Practica06/: Practiva6.tar
Practicas/Practica06/practica6/: build.xml
Practicas/Practica06/practica6/src/mx/unam/ciencias/edd/: ArbolBinarioCompleto.java  ArbolBinarioOrdenado.java  ArbolBinarioOrdenado.java~  ArbolRojinegro.java  ArbolRojinegro.java~
Practicas/Practica06/practica6/src/mx/unam/ciencias/edd/test/: TestArbolBinarioOrdenado.java  TestArbolRojinegro.java  TestArbolRojinegro.java~
Practicas/Practica07/: Practica7.tar
Practicas/Practica07/practica7/: build.xml
Practicas/Practica07/practica7/src/mx/unam/ciencias/edd/: Practica7.java  VerticeGrafica.java
Practicas/Practica07/practica7/src/mx/unam/ciencias/edd/test/: TestArbolRojinegro.java
Practicas/Practica08/: Practica8.tar
Practicas/Practica08/practica8/: build.xml
Practicas/Practica08/practica8/src/mx/unam/ciencias/edd/: Grafica.java  MonticuloMinimo.java  Pila.java  Practica8.java
Practicas/Practica08/practica8/src/mx/unam/ciencias/edd/test/: TestGrafica.java
Practicas/Practica09/: Practica9.tar
Practicas/Practica09/practica9/: build.xml
Practicas/Practica09/practica9/src/mx/unam/ciencias/edd/: ArbolBinario.java  ArbolBinarioCompleto.java  ArbolBinarioOrdenado.java  Grafica.java  MonticuloMinimo.java  Practica9.java
Practicas/Practica10/: Pratica10.tar
Practicas/Practica10/practica10/: build.xml
Practicas/Practica10/practica10/src/mx/unam/ciencias/edd/: Lista.java  MeteSaca.java  Practica10.java
Practicas/Practica10/practica10/src/mx/unam/ciencias/edd/test/: TestGrafica.java
Practicas/Practica11/: Practica11.tar
Practicas/Practica11/practica11/src/mx/unam/ciencias/edd/: ArbolBinario.java  ArbolBinarioCompleto.java  Cola.java  Grafica.java  Lista.java  Practica11.java
Proyectos/Proyecto01/: Proyecto1.tar
Proyectos/Proyecto01/proyecto1/: imagen.svg~
Proyectos/Proyecto01/proyecto1/src/mx/unam/ciencias/edd/: ArbolBinario.java~  ArbolRojinegro.java  Arreglos.java  Grafica.java  Grafica.java~  Lista.java  Proyecto1.java  Proyecto1.java~
Proyectos/Proyecto02/proyecto2/: README.txt  build.xml
Proyectos/Proyecto02/proyecto2/src/mx/unam/ciencias/edd/: ArbolRojinegro.java  Diccionario.java  FabricaHuellasDigitales.java  Grafica.java  Grafica.java~  Proyecto2.java  Proyecto2.java~
Proyectos/Proyecto02/proyecto2/src/mx/unam/ciencias/edd/test/: TestGrafica.java
